# elfin_manipulator

./: .gitignore  .gitmodules  .markdownlint.yaml  Dockerfile  README.md  frames.gv  sources.sh  test.urdf
.github/workflows/: docker-publish.yml
doc/: create_moveit_config.md
docker/: Dockerfile  sources.sh
samk/automatic_annotator/: CMakeLists.txt  package.xml
samk/automatic_annotator/launch/: gazebo.launch  scene.rviz
samk/automatic_annotator/models/: ball.urdf  big_ball.urdf  box.urdf  cylinder.urdf  plate.urdf  rectangle.urdf
samk/automatic_annotator/models/coke_can/: model.sdf
samk/automatic_annotator/models/drc_practice_2x4/: model.sdf
samk/automatic_annotator/src/: annotator.py  bbox.py  depth_annotator.py  model_publisher.py
samk/automatic_annotator/urdf/: _l515_annotation.urdf.xacro  samk_l515.urdf.xacro
samk/samk_2f_140_gripper/: CMakeLists.txt
samk/samk_2f_140_gripper/config/: ros_controllers.yaml  samk_2f_140_gripper.srdf
samk/samk_2f_140_gripper/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  (+9 more)
samk/samk_2f_85_gripper/: .setup_assistant  CMakeLists.txt  package.xml
samk/samk_3f_gripper/: .setup_assistant  CMakeLists.txt
samk/samk_description/: CMakeLists.txt  package.xml
samk/samk_epick/: .setup_assistant  CMakeLists.txt  package.xml
samk/samk_l515/: .setup_assistant  CMakeLists.txt  package.xml
samk/samk_schunk/: .setup_assistant  CMakeLists.txt  package.xml
samk/samk_schunk_fingers/: .setup_assistant  CMakeLists.txt  package.xml
src/: .rosinstall
src/samk_elfin/: CMakeLists.txt  package.xml
src/samk_elfin/config/: kinematics.yaml
src/samk_elfin/config/srdf/: elfin5_cyl_tool.srdf  elfin5_cyl_tool_planner.yaml  elfin5_no_tool.srdf
src/samk_elfin/launch/: basic_api.launch  gazebo.launch  planner.launch  planning_context.launch  rviz.launch
src/samk_elfin/src/: elfin_gui.py
src/samk_elfin/urdf/: elfin5.urdf.xacro  elfin5_cyl_tool.xacro  elfin5_no_tool.xacro  elfin5_open_manipulator.xacro
(+237 files in other folders)
