<package>
  <name>automatic_annotator</name>
  <version>0.0.0</version>
  <description>The automatic_annotator package</description>

  <maintainer email="juuso@todo.todo">juuso</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>


  <run_depend>gazebo_msgs</run_depend>
  <run_depend>moveit_ros_move_group</run_depend>
  <run_depend>moveit_fake_controller_manager</run_depend>
  <run_depend>moveit_kinematics</run_depend>
  <run_depend>moveit_planners_ompl</run_depend>
  <run_depend>moveit_ros_visualization</run_depend>
  <run_depend>moveit_setup_assistant</run_depend>
  <run_depend>moveit_simple_controller_manager</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>joint_state_publisher_gui</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>samk_description</run_depend>
  <run_depend>realsense-ros</run_depend>
  <run_depend>realsense_gazebo_plugin</run_depend>

  <!-- This package is referenced in the warehouse launch files, but does not build out of the box at the moment. Commented the dependency until this works. -->
  <!-- <run_depend>warehouse_ros_mongo</run_depend> -->

  <!-- The export tag contains other, unspecified, tags -->

</package>
