<?xml version="1.0"?>
<package format="2">
  <name>samk_elfin</name>
  <version>0.0.0</version>
  <description>The samk_elfin package</description>

  <maintainer email="hannu.2.henttinen@samk.fi">Hannu Henttinen</maintainer>
  <author email="hannu.2.henttinen@samk.fi">Hannu Henttinen</author>

  <license>GPLv3</license>
  <url type="website">https://github.com/rokokoo/elfin5</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>xacro</exec_depend>

</package>
